# ocalfw_extras

./: CMakeLists.txt  README.md  copy_quicklooks  run_tasks
scripts/: CMakeLists.txt  cleanup_results  copy_quicklooks  create_quicklook_tasks  pdfshrink  run_tasks
templates/: proc_quicklook.ocal  proc_raw.ocal  quicklook_detector.ocal  quicklook_raw.ocal  quicklook_scanning_maximum.ocal  quicklook_scanning_row.ocal
